--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -215,15 +215,15 @@
   color: black;
   border-radius: 20px; 
   border: none;
-  padding: 8px 20px; 
+  padding: 8px 15px; 
   font-weight: 600;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0px;
   cursor: pointer;
   transition: all 0.3s ease;
-  height: 60px;
-  width: 110px;
+  height: 35px;
+  width: 100px;
   margin: 0 !important;
 }
 .cart-btn {
@@ -231,13 +231,13 @@
   color: black;
   border-radius: 50px; /* This gives a pill shape */
   border: none;
-  padding: 8px 20px;  /* Reduced padding as requested */
+  padding: 8px 9px;  /* Reduced padding as requested */
   font-weight: 600;
   display: flex;
   align-items: center;
   gap: 1px;
-  height: 60px;
-  width: 60px;
+  height: 40px;
+  width: 40px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin: 0 !important;
@@ -262,7 +262,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 30px;
-  background-color: #15171f;
+  background-color: #ffffff;
   color: white;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -338,7 +338,7 @@
   .main-navbar {
     flex-direction: column;
     align-items: flex-start;
-    padding: 15px 20px;
+    padding: 0px 20px;
     top: 25px;
   }
 
