--- a/src/components/ViewAllPopup.css
+++ b/src/components/ViewAllPopup.css
@@ -59,6 +59,6 @@
 @media (max-width: 768px) {
   .viewall-scrollable {
     grid-template-columns: 1fr;
-    max-height: 350px;
+    max-height: 100vh;
   }
 }
